--- a/examples/ipyviz Examples.ipynb
+++ b/examples/ipyviz Examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "aimport networkx as nx"
+    "import networkx as nx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -35,8 +35,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Graphs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -60,9 +67,10 @@
        "\n",
        "</style>\n",
        "<body>\n",
+       "<script src=\"//d3js.org/d3.v3.min.js\"></script>\n",
        "<svg id=\"graph\" height=500 width=960></svg>\n",
        "<script type=\"text/javascript\">\n",
-       "  var graph = {\"nodes\": [{\"id\": 0}, {\"id\": 1}, {\"id\": 2}, {\"id\": 3}, {\"id\": 4}, {\"id\": 5}, {\"id\": 6}, {\"id\": 7}, {\"id\": 8}, {\"id\": 9}, {\"id\": 10}, {\"id\": 11}, {\"id\": 12}, {\"id\": 13}, {\"id\": 14}, {\"id\": 15}, {\"id\": 16}, {\"id\": 17}, {\"id\": 18}, {\"id\": 19}, {\"id\": 20}, {\"id\": 21}, {\"id\": 22}, {\"id\": 23}, {\"id\": 24}, {\"id\": 25}, {\"id\": 26}, {\"id\": 27}, {\"id\": 28}, {\"id\": 29}, {\"id\": 30}], \"multigraph\": false, \"directed\": false, \"graph\": {\"name\": \"empty_graph(31)\"}, \"links\": [{\"source\": 0, \"target\": 1}, {\"source\": 0, \"target\": 2}, {\"source\": 1, \"target\": 3}, {\"source\": 1, \"target\": 4}, {\"source\": 2, \"target\": 5}, {\"source\": 2, \"target\": 6}, {\"source\": 3, \"target\": 8}, {\"source\": 3, \"target\": 7}, {\"source\": 4, \"target\": 10}, {\"source\": 4, \"target\": 9}, {\"source\": 5, \"target\": 11}, {\"source\": 5, \"target\": 12}, {\"source\": 6, \"target\": 13}, {\"source\": 6, \"target\": 14}, {\"source\": 7, \"target\": 16}, {\"source\": 7, \"target\": 15}, {\"source\": 8, \"target\": 17}, {\"source\": 8, \"target\": 18}, {\"source\": 9, \"target\": 20}, {\"source\": 9, \"target\": 19}, {\"source\": 10, \"target\": 21}, {\"source\": 10, \"target\": 22}, {\"source\": 11, \"target\": 24}, {\"source\": 11, \"target\": 23}, {\"source\": 12, \"target\": 25}, {\"source\": 12, \"target\": 26}, {\"source\": 13, \"target\": 27}, {\"source\": 13, \"target\": 28}, {\"source\": 14, \"target\": 30}, {\"source\": 14, \"target\": 29}]};\n",
+       "  var graph = {\"directed\": false, \"graph\": {\"name\": \"empty_graph(31)\"}, \"nodes\": [{\"id\": 0}, {\"id\": 1}, {\"id\": 2}, {\"id\": 3}, {\"id\": 4}, {\"id\": 5}, {\"id\": 6}, {\"id\": 7}, {\"id\": 8}, {\"id\": 9}, {\"id\": 10}, {\"id\": 11}, {\"id\": 12}, {\"id\": 13}, {\"id\": 14}, {\"id\": 15}, {\"id\": 16}, {\"id\": 17}, {\"id\": 18}, {\"id\": 19}, {\"id\": 20}, {\"id\": 21}, {\"id\": 22}, {\"id\": 23}, {\"id\": 24}, {\"id\": 25}, {\"id\": 26}, {\"id\": 27}, {\"id\": 28}, {\"id\": 29}, {\"id\": 30}], \"multigraph\": false, \"links\": [{\"source\": 0, \"target\": 1}, {\"source\": 0, \"target\": 2}, {\"source\": 1, \"target\": 3}, {\"source\": 1, \"target\": 4}, {\"source\": 2, \"target\": 5}, {\"source\": 2, \"target\": 6}, {\"source\": 3, \"target\": 8}, {\"source\": 3, \"target\": 7}, {\"source\": 4, \"target\": 10}, {\"source\": 4, \"target\": 9}, {\"source\": 5, \"target\": 11}, {\"source\": 5, \"target\": 12}, {\"source\": 6, \"target\": 13}, {\"source\": 6, \"target\": 14}, {\"source\": 7, \"target\": 16}, {\"source\": 7, \"target\": 15}, {\"source\": 8, \"target\": 17}, {\"source\": 8, \"target\": 18}, {\"source\": 9, \"target\": 20}, {\"source\": 9, \"target\": 19}, {\"source\": 10, \"target\": 21}, {\"source\": 10, \"target\": 22}, {\"source\": 11, \"target\": 24}, {\"source\": 11, \"target\": 23}, {\"source\": 12, \"target\": 25}, {\"source\": 12, \"target\": 26}, {\"source\": 13, \"target\": 27}, {\"source\": 13, \"target\": 28}, {\"source\": 14, \"target\": 30}, {\"source\": 14, \"target\": 29}]};\n",
        "</script>\n",
        "<script type=\"text/javascript\">\n",
        "\n",
@@ -135,7 +143,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +221,7 @@
        "\n",
        "<body>\n",
        "\n",
-       "   <div class=&quot;folium-map&quot; id=&quot;folium_2018b4b065574d3ab89e7d16ceeff064&quot; style=&quot;width: 100%; height: 100%&quot;></div>\n",
+       "   <div class=&quot;folium-map&quot; id=&quot;folium_cae2297a6c244411822e718afa6703cb&quot; style=&quot;width: 100%; height: 100%&quot;></div>\n",
        "\n",
        "   <script>\n",
        "\n",
@@ -257,7 +265,7 @@
        "      /*\n",
        "      Creates the map and adds the selected layers\n",
        "      */\n",
-       "      var map = L.map('folium_2018b4b065574d3ab89e7d16ceeff064', {\n",
+       "      var map = L.map('folium_cae2297a6c244411822e718afa6703cb', {\n",
        "                                       center:[48.0154, 11.2351],\n",
        "                                       zoom: 14,\n",
        "                                       maxBounds: bounds,\n",
@@ -309,7 +317,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
